# ycloud

./: .clang-format  .gitignore  .golangci.yml  CMakeLists.txt  CPPLINT.cfg  README.md  docker-compose.yaml
gateway/: README.md  go.mod
gateway/cmd/srv/: main.go
gateway/internal/pxy/: lookup.go  lookup_test.go  pxy.go
gateway/pkg/domain/: service.go
ydb/: CMakeLists.txt  README.md  example.env  example.test.env  ydb
ydb/include/: connection-info.h  connection.h  reference.h  result.h  row.h  transaction.h  ydb.h
ydb/include/driver/: driver-factory.h  driver.h  reference-driver.h  result-driver.h  row-driver.h  transaction-driver.h
ydb/include/driver/postgresql/: postgresql-driver-factory.h  postgresql-driver.h  postgresql-reference-driver.h  postgresql-result-driver.h  postgresql-row-driver.h  postgresql-transaction-driver.h
ydb/scripts/: dev-init.sh  dev-test.sh
ydb/src/: connection-info-builder.cpp  connection-info-builder.h  connection-info.cpp  connection-info.h  connection-pool.cpp  connection-pool.h  connection.cpp  migration.cpp  migration.h  migrations-runner.cpp  migrations-runner.h  reference.cpp  result.cpp  row.cpp  transaction.cpp  ydb.cpp  ydb.h
ydb/src/driver/postgresql/: postgresql-driver-factory.cpp  postgresql-driver.cpp  postgresql-reference-driver.cpp  postgresql-result-driver.cpp  postgresql-row-driver.cpp  postgresql-transaction-driver.cpp
ydb/test/: connection-info-builder_test.cpp  connection-info_test.cpp  connection-pool_test.cpp  migrations_test.cpp  postgresql-test-enviornment.h  postgresql-test-environment.cpp  postgresql_test.cpp  test-setup.cpp
ydb/test/include/: postgresql-test-enviornment.h  ydb-test.h
ydbcapability/: CMakeLists.txt  example.test.env
ydbcapability/include/: db-capability.h  ydbcapability.h
ydbcapability/scripts/: dev-init.sh  dev-test.sh
ydbcapability/src/: db-capability.cpp
ydbcapability/test/: db-capability_test.cpp
ydbrestcapability/: CMakeLists.txt  example.env  example.test.env
ydbrestcapability/include/: db-accessor.h  db-middleware.h  db-rest-capability.h  ydbrestcapability.h
ydbrestcapability/scripts/: dev-init.sh  dev-test.sh
ydbrestcapability/src/: db-accessor.cpp  db-middleware.cpp  db-rest-capability.cpp
ydbrestcapability/test/: db-rest-capability_test.cpp  test-setup.cpp
ymicroservice/: CMakeLists.txt
ymicroservice/include/: capabilities.h  capability.h  service.h  startable.h  ymicroservice.h
ymicroservice/scripts/: dev-init.sh  dev-test.sh
ymicroservice/src/: capability.cpp  service.cpp  startable.cpp
ymicroservice/test/: microservice-test-environment.cpp  service_test.cpp
ymicroservice/test/include/: microservice-test-environment.h
yorg/: CMakeLists.txt  CPPLINT.cfg  README.md  example.env  example.test.env
yorg/scripts/: dev-clean.sh  dev-init.sh  dev-run.sh  dev-test.sh
yorg/src/: conn-accessor.cpp  conn-accessor.h  controllers.cpp  controllers.h  dependencies.cpp  dependencies.h  main.cpp  middleware.h  migrations.cpp  migrations.h  server.cpp  server.h  service.cpp  service.h
yorg/src/controllers/: hello-controller.cpp  hello-controller.h  tasks-controller.cpp  tasks-controller.h
yorg/src/middleware/: db-middleware.cpp  db-middleware.h
yorg/src/migrations/: 2023-01-05T16-00-create-task.cpp
yorg/test/: first_test.cpp  tasks-controller_test.cpp  test-setup.cpp
yrestcapability/: CMakeLists.txt
yrestcapability/include/: rest-capability.h  yrestcapability.h
yrestcapability/scripts/: dev-init.sh  dev-test.sh
yrestcapability/src/: rest-capability.cpp
yrestcapability/src/validation/: array-validator.cpp  array-validator.h  number-validator.cpp  number-validator.h  object-validator.cpp  object-validator.h  pattern-validator.cpp  pattern-validator.h  range-validator.h  validation-constraint.cpp  validation-constraint.h  validation-entry.cpp  validation-entry.h  validation-result.cpp  validation-result.h  validator.cpp  validator.h  validators.cpp  validators.h  value-type.h  value-validator.h
yrestcapability/test/: rest-capability_test.cpp  rest-client.cpp  some_test.cpp  test-setup.cpp
yrestcapability/test/include/: rest-client.h
yrestcapability/test/validation/: array-validator_test.cpp  number-validator_test.cpp  object-validator_test.cpp  validator_test.cpp
yutil/: CMakeLists.txt
yutil/include/: yutil.h
yutil/scripts/: dev-init.sh  dev-test.sh
yutil/src/: date-time.cpp  date-time.h  env.cpp  env.h  pool.h  ro-type-map.cpp  ro-type-map.h  semaphore.cpp  semaphore.h  type-map.cpp  type-map.h  uuid.cpp  uuid.h
yutil/src/schema/: array-schema.cpp  array-schema.h  constraint.cpp  constraint.h  object-schema.cpp  object-schema.h  schema.cpp  schema.h  schemas.cpp  schemas.h  value-type.h
yutil/test/: date-time_test.cpp  pool_test.cpp  semaphore_test.cpp  type-map_test.cpp  uuid_test.cpp
yutil/test/schema/: object-schema_test.cpp  schema_test.cpp
